--- a/index.html
+++ b/index.html
@@ -3,113 +3,140 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Viva Suelo | Desarrollo Sustentable</title>
+<title>Viva Suelo | Asesoría y Desarrollo Sustentable</title>
 
 <style>
 
 body{
-margin:0;
-font-family: 'Segoe UI', sans-serif;
-background-color:#0f0f0f;
-color:white;
-scroll-behavior:smooth;
+  margin:0;
+  font-family:'Segoe UI', sans-serif;
+  background:#0f0f0f;
+  color:white;
+  scroll-behavior:smooth;
 }
 
 header{
-background:#000;
-padding:20px 40px;
-display:flex;
-justify-content:space-between;
-align-items:center;
-position:fixed;
-width:100%;
-top:0;
-z-index:1000;
-border-bottom:2px solid #1b5e20;
+  background:#000;
+  padding:20px 40px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  position:fixed;
+  width:100%;
+  top:0;
+  z-index:1000;
+  border-bottom:3px solid #1b5e20;
 }
 
 header h1{
-margin:0;
-color:#ffffff;
-font-weight:600;
-letter-spacing:1px;
+  margin:0;
+  letter-spacing:2px;
 }
 
 nav a{
-color:#4caf50;
-text-decoration:none;
-margin-left:25px;
-font-weight:500;
+  color:white;
+  text-decoration:none;
+  margin-left:25px;
+  transition:0.3s;
 }
 
 nav a:hover{
-color:white;
-}
-
-section{
-padding:120px 40px 80px 40px;
-max-width:1200px;
-margin:auto;
+  color:#4caf50;
 }
 
 .hero{
-background:linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),
-url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6');
-background-size:cover;
-background-position:center;
-text-align:center;
-padding:180px 20px;
+  height:100vh;
+  background:
+    linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),
+    url('archivo_000000002090720e92c7c5ec52173107.png') center/cover no-repeat;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
+  padding:20px;
+}
+
+.hero-content{
+  max-width:800px;
 }
 
 .hero h2{
-font-size:38px;
-margin-bottom:20px;
+  font-size:48px;
+  margin-bottom:20px;
 }
 
 .hero p{
-font-size:18px;
-max-width:800px;
-margin:auto;
-color:#e0e0e0;
+  font-size:20px;
+  margin-bottom:30px;
+  color:#e0e0e0;
 }
 
 .btn{
-display:inline-block;
-margin-top:30px;
-padding:14px 28px;
-background:#1b5e20;
-color:white;
-text-decoration:none;
-border-radius:4px;
-font-weight:600;
+  background:#1b5e20;
+  color:white;
+  padding:15px 30px;
+  border:none;
+  border-radius:5px;
+  font-size:18px;
+  cursor:pointer;
+  text-decoration:none;
+  transition:0.3s;
 }
 
 .btn:hover{
-background:#2e7d32;
+  background:#2e7d32;
 }
 
-.section-title{
-font-size:30px;
-margin-bottom:20px;
-color:#4caf50;
-border-left:5px solid #6d4c41;
-padding-left:15px;
+section{
+  padding:100px 40px;
 }
 
-.card{
-background:#1c1c1c;
-padding:25px;
-margin-bottom:25px;
-border-left:4px solid #6d4c41;
-border-radius:6px;
+.section-dark{
+  background:#111;
+}
+
+.section-green{
+  background:#1b5e20;
+}
+
+.section-wood{
+  background:linear-gradient(#3e2723,#5d4037);
+}
+
+h3{
+  text-align:center;
+  font-size:32px;
+  margin-bottom:20px;
+}
+
+.container{
+  max-width:1000px;
+  margin:auto;
+  text-align:center;
 }
 
 footer{
-background:#000;
-text-align:center;
-padding:30px;
-border-top:2px solid #1b5e20;
-color:#aaa;
+  background:#000;
+  padding:40px;
+  text-align:center;
+  border-top:3px solid #1b5e20;
+}
+
+footer p{
+  color:#aaa;
+  margin:5px 0;
+}
+
+.whatsapp-float{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  background:#25D366;
+  color:white;
+  padding:15px;
+  border-radius:50%;
+  text-decoration:none;
+  font-size:22px;
 }
 
 </style>
@@ -118,107 +145,84 @@ color:#aaa;
 <body>
 
 <header>
-<h1>Viva Suelo</h1>
-<nav>
-<a href="#quienes">Quiénes Somos</a>
-<a href="#asesorias">Asesorías</a>
-<a href="#agricultura">Agricultura</a>
-<a href="#educacion">Educación</a>
-<a href="#contacto">Contacto</a>
-</nav>
+  <h1>VIVA SUELO</h1>
+  <nav>
+    <a href="#servicios">Servicios</a>
+    <a href="#educacion">Educación</a>
+    <a href="#asesorias">Asesorías</a>
+    <a href="#contacto">Contacto</a>
+  </nav>
 </header>
 
 <section class="hero">
-<h2>Viva Suelo impulsa mujeres emprendedoras y agricultores en Chile a transformar sus ideas en negocios sostenibles y rentables, con asesoría estratégica y acompañamiento real</h2>
-<p>Desarrollo de PYMES, fondos públicos, huertos familiares, lombricultura, hidroponía y educación agrícola sustentable.</p>
-<a href="#asesorias" class="btn">Conoce nuestras asesorías</a>
+  <div class="hero-content">
+    <h2>Viva Suelo impulsa mujeres emprendedoras y agricultores en Chile</h2>
+    <p>Transformamos ideas en negocios sostenibles y rentables con asesoría estratégica y acompañamiento real.</p>
+    <a href="#contacto" class="btn">Solicitar Asesoría</a>
+  </div>
 </section>
 
-<section id="quienes">
-<h3 class="section-title">Quiénes Somos</h3>
-<div class="card">
-Somos una plataforma dedicada a fortalecer mujeres emprendedoras (18-50 años) y agricultores en Chile, entregando herramientas reales para crear negocios sostenibles, rentables y alineados con el desarrollo rural y ambiental.
-</div>
+<section id="servicios" class="section-dark">
+  <div class="container">
+    <h3>Servicios</h3>
+    <p>Lombricultura con lombriz californiana y producción de humus.</p>
+    <p>Implementación de hidroponía y huertos familiares.</p>
+    <p>Diseño de jardineras de autorriego con semillas y compost natural.</p>
+  </div>
 </section>
 
-<section id="asesorias">
-<h3 class="section-title">Asesorías Estratégicas para PYMES</h3>
-
-<div class="card">
-✔ Postulación a fondos públicos: SERCOTEC, CORFO, INDAP, FOSIS, PRODEMU.
-</div>
-
-<div class="card">
-✔ Desarrollo de modelo de negocio sostenible.
-</div>
-
-<div class="card">
-✔ Creación de páginas web y presencia digital.
-</div>
-
-<div class="card">
-✔ Planificación financiera y estructuración formal.
-</div>
-
-<div class="card">
-✔ Acompañamiento personalizado hasta implementación.
-</div>
-
+<section id="educacion" class="section-green">
+  <div class="container">
+    <h3>Educación y Formación</h3>
+    <p>Capacitaciones en compostaje, regeneración de suelos y economía circular.</p>
+    <p>Formación en hierbas medicinales y sus beneficios para el organismo.</p>
+    <p>Programas prácticos para mujeres emprendedoras y agricultores.</p>
+  </div>
 </section>
 
-<section id="agricultura">
-<h3 class="section-title">Agricultura Sustentable</h3>
-
-<div class="card">
-<strong>Lombriz Roja Californiana:</strong> Producción de humus natural de alta calidad que mejora estructura del suelo, retención de agua y nutrientes.
-</div>
-
-<div class="card">
-<strong>Hidroponía:</strong> Cultivo sin suelo con mayor eficiencia hídrica y crecimiento acelerado.
-</div>
-
-<div class="card">
-<strong>Huertos Familiares:</strong> Diseño, planificación y acompañamiento para producción local sostenible.
-</div>
-
-<div class="card">
-<strong>Jardineras de Autorriego:</strong> Incluyen semillas seleccionadas y compost natural para asegurar un crecimiento saludable.
-</div>
-
+<section id="asesorias" class="section-wood">
+  <div class="container">
+    <h3>Asesorías Estratégicas para PYMES</h3>
+    <p>Postulación a fondos estatales (SERCOTEC, CORFO, INDAP).</p>
+    <p>Creación y formalización de negocios verdes.</p>
+    <p>Desarrollo de páginas web y posicionamiento digital.</p>
+    <p>Estructuración financiera y planificación estratégica.</p>
+  </div>
 </section>
 
-<section id="educacion">
-<h3 class="section-title">Educación en Hierbas Medicinales</h3>
+<section id="contacto" class="section-dark">
+  <div class="container">
+    <h3>Contacto</h3>
 
-<div class="card">
-✔ Menta: Apoya digestión y sistema respiratorio.
-</div>
+    <p><strong>Email:</strong> 
+      <a href="mailto:vivasuelo@outlook.com" style="color:#4caf50;">
+        vivasuelo@outlook.com
+      </a>
+    </p>
 
-<div class="card">
-✔ Manzanilla: Efecto calmante y antiinflamatorio natural.
-</div>
+    <p><strong>WhatsApp:</strong> 
+      <a href="https://wa.me/56979943219" target="_blank" style="color:#4caf50;">
+        +56 9 7994 3219
+      </a>
+    </p>
 
-<div class="card">
-✔ Romero: Estimula circulación y memoria.
-</div>
+    <p><strong>Facebook:</strong> 
+      <a href="https://www.facebook.com/share/17X9s6KVFQ/" target="_blank" style="color:#4caf50;">
+        Ver página oficial
+      </a>
+    </p>
 
-<div class="card">
-✔ Lavanda: Relajante natural y apoyo al descanso.
-</div>
-
-</section>
-
-<section id="contacto">
-<h3 class="section-title">Contáctanos</h3>
-<div class="card">
-Estamos listos para acompañarte en tu proceso de crecimiento sostenible.<br><br>
-Escríbenos y transforma tu idea en una realidad rentable.
-</div>
+    <p>Atendemos en todo Chile 🇨🇱</p>
+  </div>
 </section>
 
 <footer>
-© 2026 Viva Suelo - Desarrollo Sustentable en Chile
+  <p>Fundador: Luis Alberto Delgado</p>
+  <p>Viva Suelo © 2026</p>
+  <p>Desarrollo Sustentable • Innovación Verde • Asesoría Estratégica</p>
 </footer>
+
+<a class="whatsapp-float" href="https://wa.me/56979943219" target="_blank">💬</a>
 
 </body>
 </html>
